public class PlayerStateConst
{
    public const string IdleState = "Idle";
    public const string RunState = "Run";
    public const string JumpState = "Jump";
    public const string FallState = "Fall";
    public const string AttackState = "Attack";
    public const string DeathState = "Death";
    public const string IdleBlockState = "IdleBlock";
}